@@ -73,6 +73,7 @@ ver 0.16 (20??/??/??)
 * replay gain:
   - reimplemented as a filter plugin
   - fall back to track gain if album gain is unavailable
+  - optionally use hardware mixer to apply replay gain
 * log unused/unknown block parameters
 * removed the deprecated "error_file" option
 * save state when stopped
